adding common and further properties to base properties